--- a/00-odin-recipies/index.html
+++ b/00-odin-recipies/index.html
@@ -1,2 +1,10 @@
-<h1>Recipies for the Odin Project</h1>
+<h1>Odin Recipes</h1>
 <p>- By SL</p>
+
+<ul>
+<h1>Odin Recipes</h1>
+<li><a href="recipes/lasagna.html">Lasagne</a></li>
+<li><a href="recipes/pasta.html">Pasta</a></li>
+<li><a href="recipes/sushi.html">Sushi</a></li>
+<li><a href="recipes/tacos.html">Tacos</a></li>
+</ul>
